--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "4.0.3@next",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "web-vitals": "^1.0.1"
@@ -41,6 +41,9 @@
     ]
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.9"
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.4",
+    "redux-devtools-extension": "^2.13.9",
+    "tailwindcss": "^3.0.1"
   }
 }
